--- a/src/cc.css
+++ b/src/cc.css
@@ -2,5 +2,6 @@ img {
     align-items: center;
     margin-bottom: 1rem;
     font-weight: bold;
-    border-color: black;
+    border-color: black !important;
+    scroll-behavior: auto;
 }
