Fix styling and add new dependencies

--- a/src/cc.css
+++ b/src/cc.css
@@ -1,7 +1,5 @@
 img {
-    align-items: center;
-    margin-bottom: 1rem;
-    font-weight: bold;
-    border-color: black !important;
-    scroll-behavior: auto;
+justify-content: space-evenly;
+text-align: center;
+align-self: center;
 }
